--- a/templates/product_category/index.html.twig
+++ b/templates/product_category/index.html.twig
@@ -5,7 +5,8 @@
 {% block body %}
     <h1>Product Category</h1>
     <div class="row justify-content-between">
-        <a class="col-3 btn btn-primary" href="{{ path('app_product_category_new') }}"> Nueva Categoria </a>
+        <a class="col-3 btn btn-primary" href="{{ path('app_product_new', {'selectized': true }) }}"> Nueva Categoria </a>
+        <a class="col-3 btn btn-primary" href="{{ path('app_product_new', {'selectized': true }) }}"> Nueva Categoria Select</a>
     </div>
     <table class="table">
         <thead>
